--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.9.2",
+    "brfs": "^1.2.0",
     "bson": "https://registry.npmjs.org/bson/-/bson-0.2.15.tgz",
     "connect-mongo": "https://registry.npmjs.org/connect-mongo/-/connect-mongo-0.4.1.tgz",
     "cookie-parser": "^1.3.3",
