--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   "bugs": {
     "url": "https://github.com/graden/hle/issues"
   },
-  "homepage": "https://github.com/graden/hle"
+  "homepage": "https://github.com/graden/hle",
+  "subdomain": "hle",
+  "engines": {
+    "node": "0.10.x"
+  }
 }
